--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+boto3==1.16.4
+botocore==1.19.4
+s3transfer==0.3.3
+brotlipy==0.7.0
 certifi==2020.6.20
-numpy==1.19.2
-pandas==1.1.3
 python-dateutil==2.8.1
 pytz==2020.1
+s3transfer==0.3.3
 selenium==3.141.0
+s3transfer==0.3.3
 six==1.15.0
 urllib3==1.25.11
